# myasnakegame

./: .gitignore  CMakeLists.txt  README.md
include/: apple.h  controllers.h  score.h  snake.h  timer.h  window.h  working_dir.h
src/: apple.c  controllers.c  main.c  score.c  snake.c  timer.c
